--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,19 +1,19 @@
 [versions]
-dbinspector = "5.3.7"
-gradle = "4.2.2"
+dbinspector = "5.3.8"
+gradle = "7.0.1"
 kotlin = "1.5.21"
 coroutines = "1.5.1"
 core = "1.6.0"
-appcompat = "1.3.0"
-activity = "1.2.3"
-fragment = "1.3.5"
+appcompat = "1.3.1"
+activity = "1.3.0"
+fragment = "1.3.6"
 lifecycle = "2.3.1"
 viewpager = "1.0.0"
-paging = "3.0.0"
+paging = "3.0.1"
 recyclerview = "1.2.1"
-startup = "1.0.0"
+startup = "1.1.0"
 swiperefresh = "1.1.0"
-datastore = "1.0.0-rc01"
+datastore = "1.0.0"
 dynamicanimation = "1.0.0"
 design = "1.4.0"
 protobuf-core = "3.17.3"
@@ -22,7 +22,7 @@ koin = "3.1.2"
 fuzzy = "1.3.1"
 detekt = "1.17.1"
 ktlintplugin = "10.1.0"
-ktlint = "0.41.0"
+ktlint = "0.42.1"
 cpd = "3.1"
 dokka = "1.5.0"
 jacoco = "0.8.7"
@@ -35,9 +35,9 @@ mockitokotlin = "3.2.0"
 library = { module = "com.infinum.dbinspector:dbinspector", version.ref = "dbinspector" }
 librarynoop = { module = "com.infinum.dbinspector:dbinspector-no-op", version.ref = "dbinspector" }
 
-gradle = { module = "com.android.tools.build:gradle", version.ref = "gradle" }
+tools-gradle = { module = "com.android.tools.build:gradle", version.ref = "gradle" }
 
-kotlin-plugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
+kotlin-gradle = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
 kotlin-core = { module = "org.jetbrains.kotlin:kotlin-stdlib-jdk8", version.ref = "kotlin" }
 
 coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "coroutines" }
@@ -60,7 +60,7 @@ material = { module = "com.google.android.material:material", version.ref = "des
 
 protobuf-artifact = { module = "com.google.protobuf:protoc", version.ref = "protobuf-core" }
 protobuf-javalite = { module = "com.google.protobuf:protobuf-javalite", version.ref = "protobuf-core" }
-protobuf-plugin = { module = "com.google.protobuf:protobuf-gradle-plugin", version.ref = "protobuf-plugin" }
+protobuf-gradle = { module = "com.google.protobuf:protobuf-gradle-plugin", version.ref = "protobuf-plugin" }
 
 koin-android = { module = "io.insert-koin:koin-android", version.ref = "koin" }
 koin-test = { module = "io.insert-koin:koin-test", version.ref = "koin" }
@@ -68,7 +68,7 @@ koin-junit5 = { module = "io.insert-koin:koin-test-junit5", version.ref = "koin"
 
 fuzzy = { module = "me.xdrop:fuzzywuzzy", version.ref = "fuzzy" }
 
-detekt-plugin = { module = "io.gitlab.arturbosch.detekt:detekt-gradle-plugin", version.ref = "detekt" }
+detekt-gradle = { module = "io.gitlab.arturbosch.detekt:detekt-gradle-plugin", version.ref = "detekt" }
 detekt-formatting = { module = "io.gitlab.arturbosch.detekt:detekt-formatting", version.ref = "detekt" }
 
 ktlint = { module = "org.jlleitschuh.gradle:ktlint-gradle", version.ref = "ktlintplugin" }
