--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ buildscript {
         classpath libs.ktlint
         classpath libs.dokka
         classpath libs.protobuf.gradle
+        classpath libs.kover
     }
 }
 
