--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
 dbinspector = "5.4.2"
-gradle = "7.0.3"
-kotlin = "1.5.31"
+gradle = "7.0.4"
+kotlin = "1.6.10"
 coroutines = "1.5.2"
 core = "1.7.0"
 appcompat = "1.4.0"
@@ -18,14 +18,14 @@ dynamicanimation = "1.0.0"
 design = "1.4.0"
 protobuf-core = "3.19.1"
 protobuf-plugin = "0.8.18"
-koin = "3.1.3"
+koin = "3.1.4"
 fuzzy = "1.3.1"
 detekt = "1.18.0"
 ktlintplugin = "10.2.0"
-ktlint = "0.43.0"
+ktlint = "0.43.1"
 cpd = "3.2"
-dokka = "1.5.31"
-kover = "0.4.2"
+dokka = "1.6.0"
+kover = "0.4.4"
 jacoco = "0.8.7"
 junit5 = "5.8.1"
 mockk = "1.12.1"
@@ -48,6 +48,7 @@ androidx-core = { module = "androidx.core:core-ktx", version.ref = "core" }
 androidx-appcompat = { module = "androidx.appcompat:appcompat", version.ref = "appcompat" }
 androidx-activity = { module = "androidx.activity:activity-ktx", version.ref = "activity" }
 androidx-fragment = { module = "androidx.fragment:fragment-ktx", version.ref = "fragment" }
+androidx-lifecycle-runtime = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "lifecycle" }
 androidx-lifecycle-viewmodel = {module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "lifecycle" }
 androidx-viewpager = { module = "androidx.viewpager2:viewpager2", version.ref = "viewpager" }
 androidx-recyclerview = { module = "androidx.recyclerview:recyclerview", version.ref = "recyclerview" }
@@ -93,6 +94,7 @@ androidx = [
     "androidx-appcompat",
     "androidx-activity",
     "androidx-fragment",
+    "androidx-lifecycle-runtime",
     "androidx-lifecycle-viewmodel",
     "androidx-viewpager",
     "androidx-recyclerview",
