--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -69,7 +69,6 @@ dependencies {
     implementation libs.material
     implementation libs.koin.android
 
-//    debugImplementation libs.library
-    debugImplementation project(":dbinspector")
+    debugImplementation libs.library
     releaseImplementation libs.librarynoop
 }
