--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -27,7 +27,8 @@ cpd = "3.2"
 dokka = "1.6.0"
 kover = "0.4.4"
 jacoco = "0.8.7"
-junit5 = "5.8.1"
+intellij = "1.0.639"
+junit5 = "5.8.2"
 mockk = "1.12.1"
 mockito = "4.1.0"
 mockitokotlin = "4.0.0"
