--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -32,6 +32,7 @@ junit5 = "5.8.2"
 mockk = "1.12.1"
 mockito = "4.1.0"
 mockitokotlin = "4.0.0"
+turbine = "0.7.0"
 
 [libraries]
 library = { module = "com.infinum.dbinspector:dbinspector", version.ref = "dbinspector" }
@@ -89,6 +90,8 @@ mockk = { module = "io.mockk:mockk", version.ref = "mockk" }
 mockito-core = { module = "org.mockito:mockito-core", version.ref = "mockito" }
 mockito-kotlin = { module = "org.mockito.kotlin:mockito-kotlin", version.ref = "mockitokotlin" }
 
+turbine = { module = "app.cash.turbine:turbine", version.ref = "turbine" }
+
 [bundles]
 androidx = [
     "androidx-core",
@@ -113,5 +116,6 @@ test = [
     "mockk",
     "coroutines-test",
     "mockito-core",
-    "mockito-kotlin"
+    "mockito-kotlin",
+    "turbine"
 ]
