--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,12 +1,12 @@
 [versions]
-dbinspector = "5.4.3"
-gradle = "7.0.4"
+dbinspector = "5.4.4"
+gradle = "7.1.0"
 kotlin = "1.6.10"
 coroutines = "1.6.0"
 core = "1.7.0"
-appcompat = "1.4.0"
+appcompat = "1.4.1"
 activity = "1.4.0"
-fragment = "1.4.0"
+fragment = "1.4.1"
 lifecycle = "2.4.0"
 viewpager = "1.0.0"
 paging = "3.1.0"
@@ -15,22 +15,22 @@ startup = "1.1.0"
 swiperefresh = "1.1.0"
 datastore = "1.0.0"
 dynamicanimation = "1.0.0"
-design = "1.4.0"
-protobuf-core = "3.19.1"
+design = "1.5.0"
+protobuf-core = "3.19.3"
 protobuf-plugin = "0.8.18"
-koin = "3.1.4"
+koin = "3.1.5"
 fuzzy = "1.3.1"
-detekt = "1.18.0"
-ktlintplugin = "10.2.0"
-ktlint = "0.43.1"
+detekt = "1.18.1"
+ktlintplugin = "10.2.1"
+ktlint = "0.43.2"
 cpd = "3.2"
-dokka = "1.6.0"
+dokka = "1.6.10"
 kover = "0.4.4"
 jacoco = "0.8.7"
 intellij = "1.0.639"
 junit5 = "5.8.2"
-mockk = "1.12.1"
-mockito = "4.1.0"
+mockk = "1.12.2"
+mockito = "4.3.1"
 mockitokotlin = "4.0.0"
 turbine = "0.7.0"
 
@@ -51,6 +51,7 @@ androidx-appcompat = { module = "androidx.appcompat:appcompat", version.ref = "a
 androidx-activity = { module = "androidx.activity:activity-ktx", version.ref = "activity" }
 androidx-fragment = { module = "androidx.fragment:fragment-ktx", version.ref = "fragment" }
 androidx-lifecycle-runtime = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "lifecycle" }
+androidx-lifecycle-livedata = { module = "androidx.lifecycle:lifecycle-livedata-ktx", version.ref = "lifecycle" }
 androidx-lifecycle-viewmodel = {module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "lifecycle" }
 androidx-viewpager = { module = "androidx.viewpager2:viewpager2", version.ref = "viewpager" }
 androidx-recyclerview = { module = "androidx.recyclerview:recyclerview", version.ref = "recyclerview" }
@@ -99,6 +100,7 @@ androidx = [
     "androidx-activity",
     "androidx-fragment",
     "androidx-lifecycle-runtime",
+    "androidx-lifecycle-livedata",
     "androidx-lifecycle-viewmodel",
     "androidx-viewpager",
     "androidx-recyclerview",
