--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,17 +1,17 @@
 [versions]
 dbinspector = "5.4.4"
-gradle = "7.1.0"
+gradle = "7.1.2"
 kotlin = "1.6.10"
 coroutines = "1.6.0"
 core = "1.7.0"
 appcompat = "1.4.1"
 activity = "1.4.0"
 fragment = "1.4.1"
-lifecycle = "2.4.0"
+lifecycle = "2.4.1"
 viewpager = "1.0.0"
-paging = "3.1.0"
+paging = "3.1.1"
 recyclerview = "1.2.1"
-startup = "1.1.0"
+startup = "1.1.1"
 swiperefresh = "1.1.0"
 datastore = "1.0.0"
 dynamicanimation = "1.0.0"
@@ -19,10 +19,9 @@ design = "1.5.0"
 protobuf-core = "3.19.3"
 protobuf-plugin = "0.8.18"
 koin = "3.1.5"
-fuzzy = "1.3.1"
-detekt = "1.18.1"
+detekt = "1.20.0-RC1"
 ktlintplugin = "10.2.1"
-ktlint = "0.43.2"
+ktlint = "0.44.0"
 cpd = "3.2"
 dokka = "1.6.10"
 kover = "0.4.4"
@@ -70,8 +69,6 @@ protobuf-gradle = { module = "com.google.protobuf:protobuf-gradle-plugin", versi
 koin-android = { module = "io.insert-koin:koin-android", version.ref = "koin" }
 koin-test = { module = "io.insert-koin:koin-test", version.ref = "koin" }
 koin-junit5 = { module = "io.insert-koin:koin-test-junit5", version.ref = "koin" }
-
-fuzzy = { module = "me.xdrop:fuzzywuzzy", version.ref = "fuzzy" }
 
 detekt-gradle = { module = "io.gitlab.arturbosch.detekt:detekt-gradle-plugin", version.ref = "detekt" }
 detekt-formatting = { module = "io.gitlab.arturbosch.detekt:detekt-formatting", version.ref = "detekt" }
