--- a/dbinspector-no-op/build.gradle
+++ b/dbinspector-no-op/build.gradle
@@ -37,7 +37,8 @@ android {
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_1_8.toString()
         freeCompilerArgs += [
-                '-Xexplicit-api=strict'
+                '-Xexplicit-api=strict',
+                '-Xjvm-default=all'
         ]
     }
 
