* Update and prepare for 5.4.6 release.

--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -16,6 +16,8 @@ android {
         versionName releaseConfig.version
     }
 
+    namespace releaseConfig.group + ".sample"
+
     signingConfigs {
         dummy {
             storeFile file("dummy.jks")
