--- a/dbinspector/build.gradle
+++ b/dbinspector/build.gradle
@@ -30,9 +30,10 @@ android {
         }
     }
 
+    namespace releaseConfig.group
     resourcePrefix "dbinspector_"
 
-    lintOptions {
+    lint {
         disable 'RtlEnabled', 'VectorPath', 'IconLocation'
     }
 
@@ -44,7 +45,7 @@ android {
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_1_8.toString()
         freeCompilerArgs += [
-                '-Xopt-in=kotlinx.coroutines.ExperimentalCoroutinesApi',
+                '-opt-in=kotlinx.coroutines.ExperimentalCoroutinesApi',
                 '-Xexplicit-api=strict',
                 '-Xjvm-default=all'
         ]
