--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
-dbinspector = "5.4.5"
-gradle = "7.1.3"
-kotlin = "1.6.20"
+dbinspector = "5.4.6"
+gradle = "7.2.0"
+kotlin = "1.6.21"
 coroutines = "1.6.1"
 core = "1.7.0"
 appcompat = "1.4.1"
@@ -15,23 +15,23 @@ startup = "1.1.1"
 swiperefresh = "1.1.0"
 datastore = "1.0.0"
 dynamicanimation = "1.0.0"
-design = "1.5.0"
-protobuf-core = "3.20.0"
+design = "1.6.0"
+protobuf-core = "3.20.1"
 protobuf-plugin = "0.8.18"
 koin = "3.1.6"
-detekt = "1.20.0-RC2"
+detekt = "1.20.0"
 ktlintplugin = "10.2.1"
 ktlint = "0.45.2"
 cpd = "3.2"
-dokka = "1.6.10"
+dokka = "1.6.21"
 kover = "0.5.0"
-jacoco = "0.8.7"
+jacoco = "0.8.8"
 intellij = "1.0.647"
 junit5 = "5.8.2"
-mockk = "1.12.2"
-mockito = "4.3.1"
+mockk = "1.12.3"
+mockito = "4.5.1"
 mockitokotlin = "4.0.0"
-turbine = "0.7.0"
+turbine = "0.8.0"
 
 [libraries]
 library = { module = "com.infinum.dbinspector:dbinspector", version.ref = "dbinspector" }
