* Update Kotlin to 1.7.10. * Update dependencies to stable version.

--- a/build.gradle
+++ b/build.gradle
@@ -82,3 +82,9 @@ task runStaticChecks(dependsOn: [
     group = "Verification"
     description = "Run static checks on all modules"
 }
+
+task cleanMavenLocal {
+    doLast {
+        new File('~/.m2/repository/example').deleteDir()
+    }
+}
