--- a/dbinspector/build.gradle
+++ b/dbinspector/build.gradle
@@ -93,6 +93,13 @@ android {
     buildFeatures {
         viewBinding true
     }
+
+    publishing {
+        singleVariant('release') {
+            withSourcesJar()
+            withJavadocJar()
+        }
+    }
 }
 
 dependencies {
