* Update Kotlin to 1.7.20. * Update dependencies to stable version. * Implement Android 13 compatibility and changes. * Refactor logger interface and classes. * Add KDoc on all public classes.

--- a/dokka.gradle
+++ b/dokka.gradle
@@ -5,7 +5,53 @@ tasks.named("dokkaJavadoc") {
 
     dokkaSourceSets {
         named("main") {
+            moduleName.set(rootProject.name)
             includeNonPublic.set(false)
+            suppressObviousFunctions.set(true)
+            suppressInheritedMembers.set(true)
+            skipDeprecated.set(true)
+            reportUndocumented.set(true)
+            skipEmptyPackages.set(true)
+            platform.set(org.jetbrains.dokka.Platform.jvm)
+            jdkVersion.set(8)
+            noStdlibLink.set(false)
+            noJdkLink.set(false)
+            noAndroidSdkLink.set(false)
+            androidVariants.set(["debug"])
+            sourceLink {
+                localDirectory.set(file("src/main/kotlin"))
+                remoteUrl.set(uri("https://github.com/infinum/android_dbinspector/"))
+                remoteLineSuffix.set("#L")
+            }
+            perPackageOption {
+                prefix.set("com.infinum.dbinspector.extensions")
+                suppress.set(true)
+            }
+            perPackageOption {
+                prefix.set("com.infinum.dbinspector.domain.shared")
+                suppress.set(true)
+            }
+            perPackageOption {
+                prefix.set("com.infinum.dbinspector.ui.shared")
+                suppress.set(true)
+            }
+            perPackageOption {
+                prefix.set("com.infinum.dbinspector.sample")
+                suppress.set(true)
+            }
+        }
+    }
+}
+
+tasks.named("dokkaHtml") {
+    outputDirectory.set(file("$buildDir/html"))
+
+    dokkaSourceSets {
+        named("main") {
+            moduleName.set(rootProject.name)
+            includeNonPublic.set(false)
+            suppressObviousFunctions.set(true)
+            suppressInheritedMembers.set(true)
             skipDeprecated.set(true)
             reportUndocumented.set(true)
             skipEmptyPackages.set(true)
