--- a/dbinspector/build.gradle
+++ b/dbinspector/build.gradle
@@ -119,6 +119,7 @@ dependencies {
     implementation("io.ktor:ktor-server-core:2.1.2")
     implementation("io.ktor:ktor-server-netty:2.1.2")
     implementation("io.ktor:ktor-server-content-negotiation:2.1.2")
+    implementation("io.ktor:ktor-server-cors:2.1.2")
     implementation("io.ktor:ktor-serialization-kotlinx-json:2.1.2")
     implementation("io.ktor:ktor-server-status-pages:2.1.2")
     implementation("io.ktor:ktor-server-call-logging:2.1.2")
