--- a/dbinspector-client/package.json
+++ b/dbinspector-client/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@types/file-saver": "^2.0.5",
     "angular-in-memory-web-api": "^0.14.0",
+    "file-saver": "^2.0.5",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
