--- a/dbinspector-client/angular.json
+++ b/dbinspector-client/angular.json
@@ -63,6 +63,7 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "proxyConfig": "src/dev.proxy.conf.json",
           "configurations": {
             "production": {
               "browserTarget": "dbinspector-client:build:production"
