Remove cache busting hashing in name. Add control timestamp for versioning and copy overwrite. Add prebuild step in pacakge.json.

--- a/dbinspector-client/angular.json
+++ b/dbinspector-client/angular.json
@@ -20,6 +20,7 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "assets": [
+              "src/build.date.json",
               "src/favicon.ico",
               "src/assets"
             ],
@@ -33,8 +34,8 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+                  "maximumWarning": "1mb",
+                  "maximumError": "2mb"
                 },
                 {
                   "type": "anyComponentStyle",
