--- a/dbinspector-client/package.json
+++ b/dbinspector-client/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "prebuild": "node createBuildDate.js",
-    "build": "ng build --output-hashing=none",
+    "build": "ng build --output-hashing=none --configuration production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
