--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -75,7 +75,8 @@ dependencies {
     implementation libs.material
     implementation libs.koin.android
 
-    debugImplementation libs.library
-    debugImplementation libs.libraryweb
+//    debugImplementation libs.library
+    debugImplementation project(":dbinspector")
+//    debugImplementation libs.libraryweb
     releaseImplementation libs.librarynoop
 }
