--- a/dbinspector-web/build.gradle
+++ b/dbinspector-web/build.gradle
@@ -60,8 +60,8 @@ android {
 }
 
 dependencies {
+    implementation libs.kotlin.core
     implementation libs.library
-
     implementation libs.androidx.startup
 }
 
