--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,8 +5,8 @@ kotlin = "1.7.21"
 coroutines = "1.6.4"
 core = "1.9.0"
 appcompat = "1.5.1"
-activity = "1.6.0"
-fragment = "1.5.3"
+activity = "1.6.1"
+fragment = "1.5.4"
 lifecycle = "2.5.1"
 viewpager = "1.0.0"
 paging = "3.1.1"
@@ -15,13 +15,13 @@ startup = "1.1.1"
 swiperefresh = "1.1.0"
 datastore = "1.0.0"
 dynamicanimation = "1.0.0"
-ktor = "2.1.2"
+ktor = "2.1.3"
 design = "1.7.0"
-protobuf-core = "3.21.8"
+protobuf-core = "3.21.9"
 protobuf-plugin = "0.9.1"
 koinandroid = "3.3.0"
 kointest = "3.2.2"
-detekt = "1.21.0"
+detekt = "1.22.0"
 ktlintplugin = "10.3.0"
 ktlint = "0.45.2"
 cpd = "3.2"
@@ -31,9 +31,9 @@ jacoco = "0.8.8"
 intellij = "1.0.647"
 junit5 = "5.9.1"
 mockk = "1.13.2"
-mockito = "4.8.1"
+mockito = "4.9.0"
 mockitokotlin = "4.0.0"
-turbine = "0.12.0"
+turbine = "0.12.1"
 
 [libraries]
 library = { module = "com.infinum.dbinspector:dbinspector", version.ref = "dbinspector" }
@@ -125,7 +125,8 @@ ktor = [
     "ktor-content",
     "ktor-cors",
     "ktor-status",
-    "ktor-logging"
+    "ktor-logging",
+    "ktor-json"
 ]
 
 test = [
