--- a/cpd.gradle
+++ b/cpd.gradle
@@ -1,12 +1,9 @@
-apply plugin: "cpd"
+apply plugin: "de.aaschmid.cpd"
 
 cpd {
     language = 'kotlin'
 }
 
 cpdCheck {
-    reports {
-        xml.enabled = true
-    }
     source = allprojects*.file("src/main/kotlin")
 }
